--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -3,27 +3,26 @@
   justify-content: space-between;
   align-items: center;
   padding: 30px 103px;
-  background: linear-gradient(
-    90deg,
-    #1c3477 0%,
-    #1c3477 0.01%,
-    #1a3578 39.11%,
-    #73184b 75.5%,
-    #b4022a 100%
-  );
+  background:
+    linear-gradient(
+      90deg,
+      #1c3477 0%,
+      #1c3477 0.01%,
+      #1a3578 39.11%,
+      #73184b 75.5%,
+      #b4022a 100%
+    );
 
   @include vp-1366 {
     padding: 30px 45px;
   }
 
   @include vp-768 {
-    padding: 16px 15px;
+    padding: 15px 16px;
   }
 }
 
 .header__image {
-  display: flex;
-  align-items: center;
 
   @include vp-1366 {
     width: 111px;
@@ -32,12 +31,19 @@
 
   @include vp-768 {
     width: 102px;
-    height: 22px;
+    height: 19px;
+  }
+
+  img {
+    @include vp-768 {
+    width: 98.3px;
+    height: 16px;
+    }
   }
 }
 
 .header__telephone {
-  color: #fff;
+  color: #ffffff;
   text-align: right;
   font-size: 26px;
   font-style: normal;
@@ -54,6 +60,7 @@
     font-size: 22px;
     line-height: 22px;
   }
+
   @include hover-focus {
     color: #1c3374;
   }
