--- a/source/sass/global/fonts.scss
+++ b/source/sass/global/fonts.scss
@@ -1,93 +1,104 @@
 @font-face {
-  font-display: swap; 
-  font-family: 'Roboto Condensed';
+  font-display: swap;
+  font-family: "Roboto Condensed";
   font-style: normal;
   font-weight: 300;
-  src: url('../fonts/roboto-condensed-v27-cyrillic_latin-300.woff2') format('woff2');
+  src: url("../fonts/roboto-condensed-v27-cyrillic_latin-300.woff2") format("woff2");
 }
+
 /* roboto-condensed-regular - cyrillic_latin */
 @font-face {
-  font-family: 'Roboto Condensed';
+  font-family: "Roboto Condensed";
   font-style: normal;
   font-weight: 400;
-  src: url('../fonts/roboto-condensed-v27-cyrillic_latin-regular.woff2') format('woff2'); 
-}@font-face {
-  font-display: swap; 
-  font-family: 'Alumni Sans';
-  font-style: normal;
-  font-weight: 400;
-  src: url('../../fonts/alumni-sans-v18-cyrillic_latin-regular.woff2') format('woff2');
+  src: url("../fonts/roboto-condensed-v27-cyrillic_latin-regular.woff2") format("woff2");
 }
+
+@font-face {
+  font-display: swap;
+  font-family: "Alumni Sans";
+  font-style: normal;
+  font-weight: 400;
+  src: url("../../fonts/alumni-sans-v18-cyrillic_latin-regular.woff2") format("woff2");
+}
+
 /* alumni-sans-500 - cyrillic_latin */
 @font-face {
-  font-display: swap; 
-  font-family: 'Alumni Sans';
+  font-display: swap;
+  font-family: "Alumni Sans";
   font-style: normal;
   font-weight: 500;
-  src: url('../../fonts/alumni-sans-v18-cyrillic_latin-500.woff2') format('woff2'); 
+  src: url("../../fonts/alumni-sans-v18-cyrillic_latin-500.woff2") format("woff2");
 }
+
 /* alumni-sans-600 - cyrillic_latin */
 @font-face {
-  font-display: swap; 
-  font-family: 'Alumni Sans';
+  font-display: swap;
+  font-family: "Alumni Sans";
   font-style: normal;
   font-weight: 600;
-  src: url('../../fonts/alumni-sans-v18-cyrillic_latin-600.woff2') format('woff2');
+  src: url("../../fonts/alumni-sans-v18-cyrillic_latin-600.woff2") format("woff2");
 }
+
 /* alumni-sans-700 - cyrillic_latin */
 @font-face {
-  font-display: swap; 
-  font-family: 'Alumni Sans';
+  font-display: swap;
+  font-family: "Alumni Sans";
   font-style: normal;
   font-weight: 700;
-  src: url('../fonts/alumni-sans-v18-cyrillic_latin-700.woff2') format('woff2'); 
+  src: url("../fonts/alumni-sans-v18-cyrillic_latin-700.woff2") format("woff2");
 }
+
 /* alumni-sans-800 - cyrillic_latin */
 @font-face {
-  font-display: swap; 
-  font-family: 'Alumni Sans';
+  font-display: swap;
+  font-family: "Alumni Sans";
   font-style: normal;
   font-weight: 800;
-  src: url('../../fonts/alumni-sans-v18-cyrillic_latin-800.woff2') format('woff2'); 
+  src: url("../../fonts/alumni-sans-v18-cyrillic_latin-800.woff2") format("woff2");
 }
 
 /* roboto-condensed-regular - cyrillic_latin */
 @font-face {
   font-display: swap;
-  font-family: 'Roboto Condensed';
+  font-family: "Roboto Condensed";
   font-style: normal;
   font-weight: 400;
-  src: url('../fonts/roboto-condensed-v27-cyrillic_latin-regular.woff2') format('woff2'); 
+  src: url("../fonts/roboto-condensed-v27-cyrillic_latin-regular.woff2") format("woff2");
 }
+
 /* roboto-condensed-500 - cyrillic_latin */
 @font-face {
-  font-display: swap; 
-  font-family: 'Roboto Condensed';
+  font-display: swap;
+  font-family: "Roboto Condensed";
   font-style: normal;
   font-weight: 500;
-  src: url('../fonts/roboto-condensed-v27-cyrillic_latin-500.woff2') format('woff2'); 
+  src: url("../fonts/roboto-condensed-v27-cyrillic_latin-500.woff2") format("woff2");
 }
+
 /* roboto-condensed-600 - cyrillic_latin */
 @font-face {
-  font-display: swap; 
-  font-family: 'Roboto Condensed';
+  font-display: swap;
+  font-family: "Roboto Condensed";
   font-style: normal;
   font-weight: 600;
-  src: url('../fonts/roboto-condensed-v27-cyrillic_latin-600.woff2') format('woff2'); 
+  src: url("../fonts/roboto-condensed-v27-cyrillic_latin-600.woff2") format("woff2");
 }
+
 /* roboto-condensed-700 - cyrillic_latin */
 @font-face {
   font-display: swap;
-  font-family: 'Roboto Condensed';
+  font-family: "Roboto Condensed";
   font-style: normal;
   font-weight: 700;
-  src: url('../fonts/roboto-condensed-v27-cyrillic_latin-700.woff2') format('woff2'); 
+  src: url("../fonts/roboto-condensed-v27-cyrillic_latin-700.woff2") format("woff2");
 }
+
 /* roboto-condensed-800 - cyrillic_latin */
 @font-face {
-  font-display: swap; 
-  font-family: 'Roboto Condensed';
+  font-display: swap;
+  font-family: "Roboto Condensed";
   font-style: normal;
   font-weight: 800;
-  src: url('../fonts/roboto-condensed-v27-cyrillic_latin-800.woff2') format('woff2'); 
+  src: url("../fonts/roboto-condensed-v27-cyrillic_latin-800.woff2") format("woff2");
 }
