--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -1,12 +1,12 @@
 .about__container {
   display: flex;
   gap: 145px;
-  padding: 120px 103px 235px 103px;
+  padding: 120px 103px 235px;
   justify-content: center;
 
   @include vp-1366 {
     flex-direction: column;
-    padding: 100px 45px 183px 45px;
+    padding: 100px 45px 183px;
     gap: 0;
   }
 
@@ -39,20 +39,20 @@
     font-weight: 600;
     line-height: 54px;
     letter-spacing: 1.62px;
-    margin: 0 0 25px 0;
+    margin: 0 0 25px;
 
     @include vp-1366 {
       font-size: 42px;
       line-height: 42px;
       letter-spacing: 1.26px;
-      margin: 0 0 20px 0;
+      margin: 0 0 20px;
     }
 
     @include vp-768 {
       font-size: 32px;
       line-height: 32px;
       letter-spacing: 0.96px;
-      margin: 0 0 13px 0;
+      margin: 0 0 13px;
     }
   }
 
@@ -61,18 +61,19 @@
     font-style: normal;
     font-weight: 400;
     line-height: 22px;
-    margin: 0 0 95px 0;
+    margin: 0 0 95px;
 
     @include vp-1366 {
       font-size: 20px;
       line-height: 20px;
-      margin: 0 0 34px 0;
+      margin: 0 0 34px;
+      width: 500px;
     }
 
     @include vp-768 {
       font-size: 18px;
       line-height: 20px;
-      margin: 0 0 40px 0;
+      margin: 0 0 38px;
     }
   }
 
@@ -81,12 +82,12 @@
     font-style: normal;
     font-weight: 300;
     line-height: 24px; /* 150% */
-    margin: 0 0 5px 0;
+    margin: 0 0 5px;
 
     @include vp-1366 {
       width: 505px;
       text-align: center;
-      margin: 0 0 36px 0;
+      margin: 0 0 38px;
     }
 
     @include vp-768 {
@@ -94,7 +95,7 @@
       text-align: start;
       font-size: 14px;
       line-height: 22px;
-      margin: 0 0 50px 0;
+      margin: 0 0 52px;
     }
   }
 
@@ -110,16 +111,15 @@
 }
 
 .about__image-wrapper {
- 
   @include vp-768 {
-    margin: 0 0 40px 0;
+    margin: 0 0 40px;
   }
 
   img {
     min-width: 100%;
     height: 100%;
     object-fit: cover;
-    
+
 
     @include vp-1366 {
       max-height: 345px;
@@ -137,7 +137,7 @@
   right: 54%;
   width: 364px;
   height: 228px;
-  
+
 
   @include vp-1366 {
     width: 265px;
@@ -147,13 +147,12 @@
   }
 
   @include vp-768 {
-    width: 320px;
     height: 167px;
     position: static;
     width: 100%;
     inset: 0;
     transform: translateX(0);
-    }
+  }
 
   &::before {
     position: absolute;
@@ -180,7 +179,6 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
     z-index: 2;
     min-width: 100%;
     height: 100%;
@@ -196,10 +194,17 @@
   border: 2px solid #ed0233;
   position: relative;
   cursor: pointer;
+  font-size: 0;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 4;
+
+  @include vp-1366 {
+    width: 72px;
+    height: 72px;
+    border-radius: 50%;
+  }
 
   @include hover-focus {
     border: 2px solid #102654;
@@ -223,20 +228,27 @@
     height: 75px;
     border-radius: 36px;
     z-index: 5;
-    background: linear-gradient(
-      90deg,
-      #1c3477 0%,
-      #1c3477 0.01%,
-      #1a3578 39.11%,
-      #73184b 75.5%,
-      #b4022a 100%
-    );
+    background:
+      linear-gradient(
+        90deg,
+        #1c3477 0%,
+        #1c3477 0.01%,
+        #1a3578 39.11%,
+        #73184b 75.5%,
+        #b4022a 100%
+      );
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
 
+    @include vp-1366 {
+      width: 52px;
+      height: 52px;
+      border-radius: 50%;
+    }
+
     @include hover-focus {
-      background: red;
+      background: rgba(209, 10, 66, 0.2);
     }
   }
 
@@ -250,6 +262,11 @@
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 6;
+
+    @include vp-1366 {
+      left: 55%;
+      border-width: 5px 0 5px 8px;
+    }
   }
 }
 
