--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -10,7 +10,7 @@
     line-height: 54px;
     letter-spacing: 1.62px;
     text-align: center;
-    margin: 0 0 50px 0;
+    margin: 0 0 50px;
 
     @include vp-1366 {
       font-size: 42px;
@@ -22,13 +22,13 @@
       font-size: 32px;
       line-height: 32px;
       letter-spacing: 0.96px;
-      margin: 0 0 55px 0;
+      margin: 0 0 55px;
     }
   }
 }
-.advantages__container {
-  padding: 118px 61px 125px 61px;
 
+.advantages__container {
+  padding: 118px 61px 125px;
   max-width: 1160px;
 
   @include vp-1366 {
@@ -36,7 +36,7 @@
   }
 
   @include vp-768 {
-    padding: 70px 0 50px 0;
+    padding: 70px 0 50px;
   }
 
   ul {
@@ -66,7 +66,7 @@
       }
     }
 
-    &::before {
+    &::after {
       content: "";
       position: absolute;
       width: 340px;
@@ -108,7 +108,7 @@
     }
   }
 
-  li[data-element="center"] {
+  li.is-centered {
     grid-column: 2/3;
     grid-row: 1/3;
 
@@ -116,7 +116,7 @@
       grid-column: 1/3;
       grid-row: 2/3;
       margin-bottom: 26px;
-      padding: 26px 139px 0 139px;
+      padding: 26px 139px 0;
     }
 
     @include vp-768 {
@@ -142,7 +142,6 @@
     line-height: 70px;
     background: linear-gradient(128deg, #d10a42 0%, #0041ca 45.58%);
     background-clip: text;
-    -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     margin: 0 30px 0 0;
 
@@ -165,7 +164,8 @@
     line-height: 22px;
 
     @include vp-768 {
-      margin: 0 0 12px 0;
+      margin: 0 0 12px;
+      line-height: 20px;
     }
   }
 }
@@ -174,17 +174,18 @@
   @include vp-768 {
     text-align: center;
   }
-  h4 {
+
+  h3 {
     font-size: 22px;
     font-style: normal;
     font-weight: 400;
     line-height: 22px;
-    margin: 0 0 8px 0;
+    margin: 0 0 8px;
 
     @include vp-1366 {
       font-size: 20px;
       line-height: 20px;
-      margin: 0 0 12px 0;
+      margin: 0 0 12px;
     }
 
     @include vp-768 {
@@ -219,16 +220,15 @@
   background-color: #1c3374;
   display: flex;
   flex-direction: column;
-  padding: 73px 34px 76px 34px;
+  padding: 73px 34px 76px;
   width: 240px;
-  height: 340px;
   grid-column: 2/3;
   height: 100%;
   justify-content: center;
 
   @include vp-1366 {
     width: 100%;
-    padding: 30px 0 40px 0;
+    padding: 30px 0 40px;
   }
 
   span {
@@ -238,24 +238,18 @@
     font-style: normal;
     font-weight: 700;
     line-height: 70px;
-    margin: 0 0 12px 0;
+    margin: 0 0 12px;
 
     @include vp-1366 {
-      margin: 0 0 25px 0;
+      margin: 0 0 25px;
     }
 
     @include vp-768 {
       font-size: 64px;
       line-height: 64px;
-      margin: 0 0 5px 0;
+      margin: 0 0 5px;
     }
   }
-
-  // ul {
-  //   @include vp-768 {
-  //     padding: 30px 0 40px 0;
-  //   }
-  // }
 
   span + span {
     color: $color-default-white;
@@ -264,25 +258,24 @@
     font-weight: 700;
     line-height: 26px;
     text-align: center;
-    margin: 0 0 37px 0;
+    margin: 0 0 37px;
 
     @include vp-1366 {
       font-size: 24px;
       line-height: 24px;
-      margin: 0 0 25px 0;
+      margin: 0 0 25px;
     }
 
     @include vp-768 {
       font-size: 22px;
       font-weight: 700;
       line-height: 22px;
-      margin: 0 0 20px 0;
+      margin: 0 0 20px;
     }
   }
 
   p {
     color: $color-default-white;
-    text-align: center;
     font-size: 16px;
     font-style: normal;
     font-weight: 400;
@@ -299,6 +292,7 @@
       font-size: 14px;
       line-height: 22px;
       width: 186px;
+      font-weight: 300;
     }
   }
 }
