--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -15,20 +15,20 @@
   font-weight: 600;
   line-height: 54px;
   letter-spacing: 1.62px;
-  margin: 0 0 33px 0;
+  margin: 0 0 33px;
 
   @include vp-1366 {
     font-size: 42px;
     line-height: 42px;
     letter-spacing: 1.26px;
-    margin: 0 0 28px 0;
+    margin: 0 0 28px;
   }
 
   @include vp-768 {
     font-size: 32px;
     line-height: 32px;
     letter-spacing: 0.96px;
-    margin: 0 0 40px 0;
+    margin: 0 0 40px;
   }
 }
 
@@ -65,7 +65,7 @@
   @include vp-768 {
     flex-direction: column;
     min-height: 260px;
-    padding: 30px 15px 40px 15px;
+    padding: 30px 15px 40px;
     align-items: start;
   }
 }
