--- a/source/sass/blocks/form-container.scss
+++ b/source/sass/blocks/form-container.scss
@@ -18,6 +18,7 @@
 .form-container__input {
   position: relative;
   color: $color-default-white;
+
   label {
     height: 36px;
   }
@@ -76,7 +77,7 @@
 .form-container__input-container {
   display: flex;
   gap: 30px;
-  margin: 0 0 28px 0;
+  margin: 0 0 28px;
 
   @include vp-1366 {
     gap: 60px;
@@ -85,7 +86,7 @@
   @include vp-768 {
     flex-direction: column;
     gap: 35px;
-    margin: 0 0 40px 0;
+    margin: 0 0 40px;
   }
 }
 
