--- a/source/sass/blocks/games.scss
+++ b/source/sass/blocks/games.scss
@@ -35,7 +35,7 @@
 
   @include vp-1366 {
     min-width: 292px;
-    padding: 40px 45px 45px 45px;
+    padding: 40px 45px 45px;
   }
 
   @include vp-768 {
@@ -57,21 +57,22 @@
     }
   }
 }
+
 .games__text-wrapper {
   color: $color-default-white;
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 16px 69px;
-  margin: 0 0 23px 0;
+  margin: 0 0 23px;
 
   @include vp-1366 {
     gap: 9px 42px;
-    margin: 0 0 2px 0;
+    margin: 0 0 2px;
   }
 
   @include vp-768 {
     gap: 4px 49px;
-    margin: 0 0 8px 0;
+    margin: 0 0 8px;
   }
 }
 
@@ -113,13 +114,13 @@
   font-weight: 300;
   line-height: 24px;
   width: 100%;
-  margin: 0 0 12px 0;
+  margin: 0 0 12px;
   position: relative;
 
   @include vp-1366 {
     font-size: 18px;
     line-height: 24px;
-    margin: 0 0 1px 0;
+    margin: 0 0 1px;
   }
 
   @include vp-768 {
@@ -177,7 +178,7 @@
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
-  line-height: 19px;
+  line-height: 14px;
 
   @include vp-1366 {
     font-size: 10px;
@@ -193,10 +194,10 @@
   font-style: normal;
   font-weight: 300;
   line-height: 24px; /* 133.333% */
-  margin: 0 0 55px 0;
+  margin: 0 0 55px;
 
   @include vp-1366 {
-    margin: 0 0 21px 0;
+    margin: 0 0 21px;
   }
 
   @include vp-768 {
@@ -205,6 +206,7 @@
     line-height: 20px;
   }
 }
+
 .games__button {
   grid-column: span 2;
   padding: 27px 56px;
@@ -243,7 +245,7 @@
 
   @include disabled {
     opacity: 0.5;
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
     cursor: not-allowed;
     pointer-events: none;
     outline: none;
