--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -1,18 +1,18 @@
 .intro {
   color: $color-default-white;
-  background: linear-gradient(
-    90deg,
-    #1c3477 0%,
-    #1c3477 0.01%,
-    #1a3578 39.11%,
-    #73184b 75.5%,
-    #b4022a 100%
-  );
+  background:
+    linear-gradient(
+      90deg,
+      #1c3477 0%,
+      #1c3477 0.01%,
+      #1a3578 39.11%,
+      #73184b 75.5%,
+      #b4022a 100%
+    );
 }
 
 .intro__container {
   display: flex;
-  width: 955px;
   gap: 70px;
   padding: 0 308px 120px 103px;
   margin: 0;
@@ -20,12 +20,12 @@
   justify-content: center;
 
   @include vp-1366 {
-    padding: 0 45px 95px 45px;
+    padding: 0 45px 95px;
     gap: 30px;
   }
 
   @include vp-768 {
-    padding: 0 15px 70px 15px;
+    padding: 0 15px 69px;
     justify-content: flex-start;
   }
 
@@ -60,8 +60,8 @@
   @include vp-768 {
     width: 290px;
     grid-template-columns: 113px 162px;
-    grid-column-gap: 13px;
-    padding: 35px 0 0 0;
+    grid-column-gap: 15px;
+    padding: 38px 0 0;
   }
 
   ul {
@@ -74,7 +74,7 @@
     flex-direction: column;
 
     @include vp-768 {
-      padding: 18px 0 0 0;
+      padding: 15px 0 0;
     }
   }
 
@@ -100,24 +100,23 @@
     line-height: 54px;
     letter-spacing: 1.62px;
     text-transform: uppercase;
-    margin: 0;
     padding: 0;
     grid-column: span 2;
-    margin: 0 0 10px 0;
+    margin: 0 0 10px;
 
     @include vp-1366 {
       font-size: 42px;
       font-style: normal;
       line-height: 42px;
       letter-spacing: 1.26px;
-      margin: 0 0 10px 0;
+      margin: 0 0 10px;
     }
 
     @include vp-768 {
       font-size: 32px;
       line-height: 32px;
       letter-spacing: 0.96px;
-      margin: 0 0 14px 0;
+      margin: 0 0 14px;
     }
   }
 
@@ -130,21 +129,21 @@
     line-height: 110px;
     letter-spacing: 4.6px;
     text-transform: uppercase;
-    margin: 0 0 50px 0;
+    margin: 0 0 50px;
     padding: 0;
 
     @include vp-1366 {
       font-size: 72px;
       line-height: 85px;
       letter-spacing: 0.6px;
-      margin: 0 0 47px 0;
+      margin: 0 0 47px;
     }
 
     @include vp-768 {
       font-size: 62px;
       line-height: 70px;
       letter-spacing: 1.86px;
-      margin: 0 0 60px 0;
+      margin: 0 0 60px;
     }
   }
 }
@@ -181,7 +180,7 @@
 
   @include vp-768 {
     width: 290px;
-    padding: 22px 0px;
+    padding: 22px 0;
     grid-column: 1 / 3;
   }
 
@@ -197,7 +196,7 @@
 
   @include disabled {
     opacity: 0.5;
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
     cursor: not-allowed;
     pointer-events: none;
     outline: none;
