--- a/source/sass/blocks/jury-swiper.scss
+++ b/source/sass/blocks/jury-swiper.scss
@@ -12,15 +12,15 @@
 
 .jury-container {
   position: relative;
-  padding: 0 0 120px 0;
+  padding: 0 0 120px;
   max-width: 1160px;
 
   @include vp-1366 {
-    padding: 0 0 100px 0;
+    padding: 0 0 100px;
   }
 
   @include vp-768 {
-    padding: 0 0 70px 0;
+    padding: 0 0 70px;
   }
 }
 
@@ -31,7 +31,7 @@
   font-weight: 600;
   line-height: 54px;
   letter-spacing: 1.62px;
-  margin: 0 auto 45px auto;
+  margin: 0 auto 45px;
   max-width: 1160px;
 
   @include vp-1366 {
@@ -39,20 +39,20 @@
     font-size: 42px;
     line-height: 42px;
     letter-spacing: 1.26px;
-    margin: 0 auto 38px auto;
+    margin: 0 auto 38px;
   }
 
   @include vp-768 {
     font-size: 32px;
     line-height: 32px;
     letter-spacing: 0.96px;
-    margin: 0 auto 42px auto;
+    margin: 0 auto 42px;
   }
 }
 
 .jury-swiper-name {
   position: absolute;
-  color: #fff;
+  color: #ffffff;
   width: 177px;
   font-size: 22px;
   font-style: normal;
@@ -91,11 +91,10 @@
 }
 
 .jury-slide-overlay {
-  display: flex;
   flex-direction: column;
   color: $color-default-white;
   background-color: rgba(16, 38, 84, 0.89);
-  filter: drop-shadow(0px 0px 35px rgba(42, 59, 99, 0.17));
+  filter: drop-shadow(0 0 35px rgba(42, 59, 99, 0.17));
   display: none;
   width: 100%;
   height: 100%;
@@ -106,20 +105,21 @@
   padding: 45px 41px 50px 42px;
   text-align: center;
 
-  h4 {
+  h3 {
     font-size: 22px;
     font-style: normal;
     font-weight: 400;
     line-height: 22px;
-    margin: 0 0 8px 0;
+    margin: 0 0 8px;
   }
+
   span {
     color: #b6bdcc;
     font-size: 16px;
     font-style: normal;
     font-weight: 300;
     line-height: 24px;
-    margin: 0 0 33px 0;
+    margin: 0 0 33px;
   }
 
   ul {
@@ -145,28 +145,34 @@
 }
 
 .jury-button-prev {
-
+  font-size: 0;
+  top: 29%;
+  left: -76px;
+  
   @include vp-1366 {
     left: -75px;
-
   }
+
   @include vp-768 {
+    left: -53px;
     top: 32%;
   }
 }
 
 .jury-button-next {
+  font-size: 0;
+  right: 76px;
+  top: 31%;
 
   @include vp-1366 {
     top: 29%;
     right: -75px;
   }
+
   @include vp-768 {
-    top: 31%;
+    top: 32%;
     right: -53px;
   }
-
-
 }
 
 .jury-button-prev svg {
