--- a/source/sass/blocks/nav.scss
+++ b/source/sass/blocks/nav.scss
@@ -11,7 +11,7 @@
   }
 
   @include vp-768 {
-    margin: 0 0 30px 0;
+    margin: 0 0 30px;
     height: 15px;
   }
 
@@ -39,7 +39,7 @@
 
   @include vp-768 {
     gap: 16px 35px;
-    margin: 0 0 55px 0;
+    margin: 0 0 55px;
   }
 }
 
