--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -7,41 +7,43 @@
     line-height: 54px;
     letter-spacing: 1.62px;
     text-align: center;
-    margin: 0 0 70px 0;
-    padding: 120px 0 0 0;
+    margin: 0 0 70px;
+    padding: 120px 0 0;
 
     @include vp-1366 {
       font-size: 42px;
       font-weight: 600;
       line-height: 42px;
-      padding: 100px 0 0 0;
-      margin: 0 0 40px 0;
+      padding: 100px 0 0;
+      margin: 0 0 40px;
+      letter-spacing: 1.26px;
     }
 
     @include vp-768 {
       font-size: 32px;
       line-height: 32px;
       letter-spacing: 0.96px;
-      padding: 70px 0 0 0;
+      padding: 70px 0 0;
       margin: 0 0 42px;
     }
   }
 }
+
 .promo__container {
   display: flex;
   gap: 40px;
-  padding: 0 103px 120px 103px;
+  padding: 0 103px 120px;
   justify-content: center;
   max-width: 1160px;
 
   @include vp-1366 {
-    padding: 0 45px 100px 45px;
+    padding: 0 45px 100px;
     flex-direction: column;
     gap: 31px;
   }
 
   @include vp-768 {
-    padding: 0 15px 70px 15px;
+    padding: 0 15px 70px;
     gap: 40px;
   }
 }
@@ -58,7 +60,7 @@
 .promo__text-wrapper {
   color: $color-default-white;
   background-color: #ed0233;
-  padding: 40px 45px 45px 45px;
+  padding: 40px 45px 45px;
   display: flex;
   flex-direction: column;
 
@@ -70,19 +72,21 @@
   @include vp-768 {
     min-width: 290px;
     text-align: center;
-    padding: 45px 50px 51px 50px;
+    padding: 45px 50px 51px;
     width: 100%;
   }
 
-  h4 {
+  h3 {
     font-size: 26px;
     font-style: normal;
     font-weight: 700;
     line-height: 26px;
-    margin: 0 0 15px 0;
+    margin: 0 0 15px;
 
     @include vp-1366 {
-      margin: 0 0 10px 0;
+      margin: 0 0 10px;
+      font-size: 24px;
+      line-height: 24px;
     }
 
     @include vp-768 {
@@ -96,10 +100,10 @@
     font-style: normal;
     font-weight: 700;
     line-height: 70px;
-    margin: 0 0 25px 0;
+    margin: 0 0 25px;
 
     @include vp-1366 {
-      margin: 0 0 19px 0;
+      margin: 0 0 19px;
     }
 
     @include vp-768 {
@@ -115,16 +119,16 @@
     font-weight: 300;
     line-height: 24px;
     width: 190px;
-    margin: 0 0 176px 0;
+    margin: 0 0 176px;
 
     @include vp-1366 {
-      margin: 0 0 186px 0;
+      margin: 0 0 186px;
     }
 
     @include vp-768 {
       font-size: 16px;
       line-height: 20px;
-      margin: 0 auto 35px auto;
+      margin: 0 auto 35px;
     }
   }
 }
@@ -141,7 +145,6 @@
 
 .promo__button {
   background: transparent;
-  border: none;
   font-size: 14px;
   font-style: normal;
   font-weight: 700;
@@ -183,7 +186,7 @@
 
   @include disabled {
     opacity: 0.5;
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
     cursor: not-allowed;
     pointer-events: none;
     outline: none;
@@ -242,9 +245,10 @@
 .promo__offer {
   display: flex;
   flex-direction: column;
-  padding: 23px 28px 33px 28px;
+  padding: 23px 28px 33px;
   border: 7px solid;
-  border-image: linear-gradient(
+  border-image:
+    linear-gradient(
       to right,
       rgba(209, 10, 66, 1),
       rgba(0, 53, 159, 1)
@@ -263,12 +267,13 @@
     padding: 38px 58px 37px 57px;
   }
 
-  h4 {
+  h3 {
+    color: rgb(28, 51, 116);
     font-size: 26px;
     font-style: normal;
     font-weight: 700;
     line-height: 26px;
-    margin: 0 0 10px 0;
+    margin: 0 0 10px;
 
     @include vp-1366 {
       font-size: 24px;
@@ -282,23 +287,24 @@
   }
 
   p {
+    color: rgb(28, 51, 116);
     font-size: 16px;
     font-style: normal;
     font-weight: 300;
     line-height: 24px;
-    margin: 0 0 67px 0;
+    margin: 0 0 67px;
 
     @include vp-1366 {
       width: 234px;
       height: 48px;
-      margin: 0 0 45px 0;
+      margin: 0 0 45px;
     }
 
     @include vp-768 {
       width: 160px;
       font-size: 14px;
       line-height: 22px;
-      margin: 0 auto 31px auto;
+      margin: 0 auto 31px;
     }
   }
 }
