--- a/source/sass/blocks/subscription.scss
+++ b/source/sass/blocks/subscription.scss
@@ -8,13 +8,19 @@
 .subscription__after-image {
   position: absolute;
   right: 0;
-  bottom: -134px;
-  z-index: 2;
+  bottom: -150px;
+  z-index: -1;
+
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
 
   @include vp-1366 {
-    width: 275px;
-    height: 328px;
+    bottom: -147px;
   }
+
 
   @include vp-768 {
     display: none;
@@ -22,16 +28,16 @@
 }
 
 .subscription__container {
-  padding: 120px 103px;
+  padding: 126px 103px 120px;
   z-index: 3;
   position: relative;
 
   @include vp-1366 {
-    padding: 100px 164px;
+    padding: 101px 164px;
   }
 
   @include vp-768 {
-    padding: 70px 15px;
+    padding: 74px 15px 70px 15px;
   }
 
   h2 {
@@ -42,20 +48,20 @@
     line-height: 54px;
     letter-spacing: 1.62px;
     text-align: center;
-    margin: 0 0 32px 0;
+    margin: 0 0 26px 0;
 
     @include vp-1366 {
       font-size: 42px;
       line-height: 42px;
       letter-spacing: 1.26px;
-      margin: 0 0 30px;
+      margin: 0 0 29px;
     }
 
     @include vp-768 {
       font-size: 32px;
       line-height: 32px;
       letter-spacing: 0.96px;
-      margin: 0 0 17px;
+      margin: 0 0 13px;
     }
   }
 }
@@ -64,7 +70,7 @@
   display: flex;
   align-items: center;
   gap: 50px;
-  margin: 0 auto 44px auto;
+  margin: 0 auto 44px;
   width: 349px;
   height: 34px;
   flex-shrink: 0;
@@ -73,13 +79,13 @@
   @include vp-1366 {
     width: 334px;
     gap: 55px;
-    margin: 0 auto 51px auto;
+    margin: 0 auto 51px;
   }
 
   @include vp-768 {
     width: 290px;
     gap: 45px;
-    margin: 0 auto 42px auto;
+    margin: 0 auto 42px;
   }
 
   &::after {
@@ -104,7 +110,7 @@
   color: rgba(16, 38, 84, 0.5);
   cursor: pointer;
   position: relative;
-
+  
   @include vp-1366 {
     font-size: 18px;
     line-height: 18px;
@@ -131,6 +137,28 @@
   }
 }
 
+.subscription__tabs-control--is-selected {
+  color: #102654;
+  
+    &::after {
+      content: "";
+      position: absolute;
+      width: 100%;
+      height: 2px;
+      background-color: #d10a42;
+      bottom: -14px;
+      left: 0;
+
+      @include vp-1366 {
+        bottom: -13px;
+      }
+      
+      @include vp-768 {
+        bottom: -17px;
+      }
+}
+}
+
 .subscription__tabs-control:hover,
 .subscription__tabs-control:focus,
 .subscription__tabs-control:active {
@@ -140,7 +168,7 @@
     width: 100%;
     height: 2px;
     background-color: #d10a42;
-    bottom: -14px;
+    bottom: -17px;
     left: 0;
   }
 }
@@ -177,33 +205,33 @@
 
     @include vp-768 {
       width: 290px;
-      padding: 43px 35px;
+      padding: 44px 35px;
     }
 
     @include hover-focus {
-      border-image: linear-gradient(
+      border-image:
+        linear-gradient(
           to right,
           rgba(209, 10, 66, 1),
           rgba(0, 53, 159, 1)
         )
         1;
     }
-  }
-
-  h4 {
+  
+  h3 {
     color: #102654;
     text-align: center;
     font-size: 26px;
     font-style: normal;
     font-weight: 700;
     line-height: 26px;
-    margin: 0 0 11px 0;
+    margin: 0 0 8px;
 
     @include vp-1366 {
       font-size: 24px;
       font-weight: 700;
       line-height: 24px;
-      margin: 0 0 18px 0;
+      margin: 0 0 16px;
     }
 
     @include vp-768 {
@@ -213,20 +241,24 @@
   }
 
   p {
+    color: rgb(16, 38, 84);
     font-size: 16px;
     font-style: normal;
     font-weight: 300;
     line-height: 24px;
-    margin: 0 0 66px 0;
+    margin: 0 0 66px;
+    max-width: 95px;
+    max-height: 24px;
+
 
     @include vp-1366 {
-      margin: 0 0 72px 0;
+      margin: 0 0 72px;
     }
 
     @include vp-768 {
       font-size: 14px;
       line-height: 22px;
-      margin: 0 0 62px 0;
+      margin: 0 0 62px;
     }
   }
 
@@ -234,7 +266,7 @@
     position: relative;
     flex-shrink: 0;
     text-align: center;
-    margin: 0 0 35px 0;
+    margin: 0 0 35px;
     color: #103aae;
     font-size: 60px;
     font-style: normal;
@@ -246,12 +278,13 @@
     align-items: center;
 
     @include vp-1366 {
-      margin: 0 0 25px 0;
+      margin: 0 0 25px;
     }
 
     @include vp-768 {
       font-size: 48px;
-      margin: 0 0 22px 0;
+      margin: 0 0 22px;
+      width: 134px;
     }
 
     &::before {
@@ -259,7 +292,6 @@
       content: attr(data-content);
       top: 20px;
       left: -19px;
-      color: #e8e8e8;
       z-index: -1;
       transform: translateY(-50%);
       color: #e8e8e8;
@@ -271,7 +303,29 @@
     }
   }
 }
+}
 
+li.is-selected {
+  border-image:
+  linear-gradient(
+    to right,
+    rgba(209, 10, 66, 1),
+    rgba(0, 53, 159, 1)
+  )
+  1;
+}
+
+.subscription__tabs p {
+  @include vp-1366 {
+  color: #495A7D;
+}
+}
+
+.subscription__tabs > ul > li:first-child > p {
+  @include vp-1366 {
+    color: #102654;
+  }
+}
 .subscription__button {
   background-color: $color-default-white;
   font-size: 12px;
@@ -280,9 +334,10 @@
   line-height: 12px;
   letter-spacing: 0.6px;
   text-transform: uppercase;
-  padding: 27px 42px;
+  padding: 25px 42px;
   border: 2px solid #102654;
   color: #102654;
+  width: 205px;
 
   @include vp-1366 {
     width: 205px;
@@ -312,7 +367,7 @@
 
   &--is-selected {
     color: $color-default-white;
-    border: none;
-    background: var(--1, linear-gradient(97deg, #ed0233 17.6%, #003eb7 95.31%));
+    border: 2px solid transparent;
+    background: linear-gradient(97deg, #ed0233 17.6%, #003eb7 95.31%);
   }
 }
