--- a/source/sass/blocks/games.scss
+++ b/source/sass/blocks/games.scss
@@ -3,7 +3,7 @@
 }
 
 .games__container {
-  padding: 117px 103px;
+  padding: 120px 103px;
   z-index: 1;
 
   @include vp-1366 {
@@ -62,12 +62,12 @@
   color: $color-default-white;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  gap: 16px 69px;
+  gap: 19px 76px;
   margin: 0 0 23px;
 
   @include vp-1366 {
-    gap: 9px 42px;
-    margin: 0 0 2px;
+    gap: 9px 45px;
+    margin: 0 0 5px;
   }
 
   @include vp-768 {
@@ -87,11 +87,13 @@
   letter-spacing: 2.46px;
   text-transform: uppercase;
   margin: 0;
+  width: 172px;
 
   @include vp-1366 {
     font-size: 48px;
     line-height: 46px;
     letter-spacing: 1.44px;
+    width: 101px;
   }
 }
 
@@ -132,13 +134,14 @@
     content: "";
     position: absolute;
     display: block;
-    width: 100%;
+    width: 64px;
     height: 1px;
     background-color: $color-default-white;
     bottom: -8px;
 
     @include vp-1366 {
-      bottom: 2px;
+      width: 42px;
+      bottom: 0;
     }
   }
 
@@ -147,13 +150,14 @@
       content: "";
       position: absolute;
       display: block;
-      width: 100%;
+      width: 92px;
       height: 1px;
       background-color: $color-default-white;
       bottom: -8px;
 
       @include vp-1366 {
-        bottom: 3px;
+        width: 56px;
+        bottom: 1px;
       }
     }
   }
