--- a/source/sass/blocks/faq.scss
+++ b/source/sass/blocks/faq.scss
@@ -8,7 +8,7 @@
     font-weight: 600;
     line-height: 54px;
     letter-spacing: 1.62px;
-    margin: 0 auto 50px;
+    margin: 0 auto 51px;
     padding: 120px 0 0;
     max-width: 1160px;
 
@@ -31,7 +31,7 @@
 }
 
 .faq__container {
-  padding: 0 0 120px;
+  padding: 0 0 126px;
   display: flex;
   gap: 40px;
   max-width: 1160px;
@@ -39,10 +39,11 @@
   @include vp-1366 {
     padding: 0 45px 106px;
     flex-direction: column;
+    gap: 40px;
   }
 
   @include vp-768 {
-    padding: 0 15px 90px;
+    padding: 0 15px 92px;
     gap: 0;
   }
 }
@@ -81,6 +82,7 @@
   @include vp-1366 {
     width: 162px;
     height: 54px;
+    padding: 18px 37px;
   }
 
   @include vp-768 {
@@ -126,7 +128,7 @@
     margin: 0;
     display: flex;
     flex-direction: column;
-    gap: 52px;
+    gap: 50px;
     position: relative;
 
     @include vp-1366 {
@@ -144,37 +146,42 @@
       width: 100%;
       height: 1px;
       background: rgba(28, 51, 116, 0.2);
-      top: 0;
+      top: -2px;
 
       @include vp-768 {
-        top: -25px;
+        top: -23px;
       }
     }
   }
 
 
-li {
-  display: flex;
-  flex-wrap: wrap;
-  position: relative;
-  cursor: pointer;
-  width: 100%;
-  justify-content: space-between;
-  align-items: center;
-
-  &:first-child {
-    @include vp-768 {
-      gap: 20px;
-    }
-  }
-
-  &::after {
-    content: "";
-    position: absolute;
+  li {
+    display: flex;
+    flex-wrap: wrap;
+    position: relative;
+    cursor: pointer;
     width: 100%;
-    height: 1px;
-    background: rgba(28, 51, 116, 0.2);
-    bottom: -22px;
+    justify-content: space-between;
+    align-items: center;
+
+    &:first-child {
+      @include vp-768 {
+        gap: 20px;
+      }
+    }
+
+    &::after {
+      content: "";
+      position: absolute;
+      width: 100%;
+      height: 1px;
+      background: rgba(28, 51, 116, 0.2);
+      bottom: -25px;
+
+      @include vp-768 {
+        bottom: -22px;
+      }
+    }
   }
 
   h3 {
@@ -221,11 +228,19 @@ li {
       margin: 0;
     }
   }
-
-  p .is-opened {
-    display: block;
-  }
 }
+
+.faq__accordion-wrapper p .is-opened {
+  margin: 4px 0 0;
+  display: block;
+
+  @include vp-1366 {
+    margin: 1px 0 0;
+  }
+
+  @include vp-768 {
+    margin: 0;
+  }
 }
 
 
