--- a/source/sass/blocks/subscription.scss
+++ b/source/sass/blocks/subscription.scss
@@ -37,7 +37,7 @@
   }
 
   @include vp-768 {
-    padding: 74px 15px 70px 15px;
+    padding: 74px 15px 70px;
   }
 
   h2 {
@@ -48,7 +48,7 @@
     line-height: 54px;
     letter-spacing: 1.62px;
     text-align: center;
-    margin: 0 0 26px 0;
+    margin: 0 0 26px;
 
     @include vp-1366 {
       font-size: 42px;
@@ -110,7 +110,7 @@
   color: rgba(16, 38, 84, 0.5);
   cursor: pointer;
   position: relative;
-  
+
   @include vp-1366 {
     font-size: 18px;
     line-height: 18px;
@@ -139,24 +139,24 @@
 
 .subscription__tabs-control--is-selected {
   color: #102654;
-  
-    &::after {
-      content: "";
-      position: absolute;
-      width: 100%;
-      height: 2px;
-      background-color: #d10a42;
-      bottom: -14px;
-      left: 0;
 
-      @include vp-1366 {
-        bottom: -13px;
-      }
-      
-      @include vp-768 {
-        bottom: -17px;
-      }
-}
+  &::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    background-color: #d10a42;
+    bottom: -14px;
+    left: 0;
+
+    @include vp-1366 {
+      bottom: -13px;
+    }
+
+    @include vp-768 {
+      bottom: -17px;
+    }
+  }
 }
 
 .subscription__tabs-control:hover,
@@ -217,7 +217,8 @@
         )
         1;
     }
-  
+  }
+
   h3 {
     color: #102654;
     text-align: center;
@@ -253,6 +254,7 @@
 
     @include vp-1366 {
       margin: 0 0 72px;
+      color: #495a7d;
     }
 
     @include vp-768 {
@@ -302,30 +304,23 @@
       opacity: 0.48;
     }
   }
-}
-}
-
-li.is-selected {
-  border-image:
-  linear-gradient(
-    to right,
-    rgba(209, 10, 66, 1),
-    rgba(0, 53, 159, 1)
-  )
-  1;
+  .is-selected {
+    border-image:
+      linear-gradient(
+        to right,
+        rgba(209, 10, 66, 1),
+        rgba(0, 53, 159, 1)
+      )
+      1;
+  }
 }
 
-.subscription__tabs p {
-  @include vp-1366 {
-  color: #495A7D;
-}
-}
-
-.subscription__tabs > ul > li:first-child > p {
+.subscription__tabs p:first-child {
   @include vp-1366 {
     color: #102654;
   }
 }
+
 .subscription__button {
   background-color: $color-default-white;
   font-size: 12px;
