--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -1,5 +1,5 @@
 .contacts__header {
-  color: #102654;
+  color: $color-default-black;
   margin: 0 0 41px;
   font-family: $ff-alumni;
   font-size: 54px;
