--- a/source/sass/blocks/form-container.scss
+++ b/source/sass/blocks/form-container.scss
@@ -1,6 +1,6 @@
 .form-container {
   padding: 60px 170px 59px 103px;
-  background-color: #102654;
+  background-color: $color-default-black;
   display: flex;
   flex-direction: column;
   width: 50%;
@@ -26,7 +26,7 @@
   input {
     width: 190px;
     min-height: 36px;
-    background-color: #102654;
+    background-color: $color-default-black;
     color: $color-default-white;
     border: none;
     border-bottom: 1px solid rgba(225, 225, 225, 0.8);
@@ -94,7 +94,7 @@
   width: 410px;
   padding: 25px 56px;
   color: $color-default-white;
-  background-color: #102654;
+  background-color: $color-default-black;
   border: 2px solid $color-default-white;
   text-align: center;
   font-size: 12px;
