--- a/source/sass/blocks/games.scss
+++ b/source/sass/blocks/games.scss
@@ -244,7 +244,7 @@
 
   @include active {
     background-color: $color-default-white;
-    color: #102654;
+    color: $color-default-black;
   }
 
   @include disabled {
